For GitHub Issue 31: Changed creating URLs to creating Files and extracting URLs to send classpath entries to the URLClassLoader.